Added reset button for debugging

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -14,6 +14,9 @@
 	    <div id="turn-indicator">Player 1's turn</div>
 	    <div id="game-board" class="board"></div>
 	    <div id="phase-buttons"></div>
+	    <div id="game-controls">
+		    <button id="reset-button">Reset Game</button>
+	    </div>
 	    <script src="script.js"></script>
 	</div>
 </body>
